Fixed: Alignment and opacity of featured image headings on tablet and mobile

--- a/site-sass/components/slick-styling.scss
+++ b/site-sass/components/slick-styling.scss
@@ -32,9 +32,6 @@
 .heading-image {
   display: inline-block;
   float: none;
-
-  .overlay-slide {
-  }
 }
 
 
@@ -97,7 +94,17 @@ background-position: center center;
 	right: 0;
 	width: 100%;
 	height: 100%;
-  padding: 0 10px
+  padding: 0 10px;
+
+  @include mq($until:tablet) {
+    padding: 0 0;
+  }
+
+  .no-upper {
+    @include mq($until:tablet) {
+      flex-direction: row;
+    }
+  }
 }
 
 .flex-controlled {
@@ -112,7 +119,10 @@ background-position: center center;
 
     @include mq($until:desktop) {
       padding: 10px 20px;
-      margin: auto;
+    }
+
+    @include mq(tablet) {
+      margin-left: 30px;
     }
 
     * > a {
@@ -122,12 +132,17 @@ background-position: center center;
 
 }
 
+.single-page {
+
+  .overlay-slide.full-colour {
+    margin-left: 0px;
+     background-color: #ffffff;
+  }
+}
+
 .overlay-slide.full-colour {
 
 	 background-color: rgba(#ffffff, 0.8);
-	 @include mq(tablet) {
-	 background-color: #ffffff;
-	 }
 }
 
 
